--- a/draft.tex
+++ b/draft.tex
@@ -2,11 +2,11 @@
  \ijcaitrue  %UNCOMMENT this to have the ijcai formatting / COMMENT for draft format
  
 \newif\ifappendix
-%\appendixtrue %COMMENT to remove appendix
+\appendixtrue %COMMENT to remove appendix
 \ifijcai
  	\input{ijcai_preamble} 
 	\author{Olivier Cailloux$^1$	\and Beatrice Napolitano$^1$\and Paolo Viappiani$^{2}$
-	\affiliations $^1$ LAMSADE, CNRS and Dauphine University, PSL, Paris, France\\ $^2$ LIP6, UMR 7606, CNRS and Sorbonne Universit\'e, Paris, France
+	\affiliations $^1$ LAMSADE, UMR 7243, CNRS and Universit\'e Paris Dauphine, PSL Research University, Paris, France\\ $^2$ LIP6, UMR 7606, CNRS and Sorbonne Universit\'e, Paris, France
 	\emails \{first, second\}@lamsade.fr, paolo.viappiani@lip6.fr
 }
 \else
@@ -44,6 +44,8 @@
 \newcommand{\prefr}{{\succ}^\text{r}}%real, connected pref, strict
 \newcommand{\ppreflarge}{\succeq^\text{p}}%partial pref
 \newcommand{\ppref}{\succ^\text{p}}%partial pref
+\newcommand{\nppref}{\nsucc^\text{p}}%negated partial pref
+
 %Thanks to https://tex.stackexchange.com/q/154549
 \makeatletter
 \newcommand{\newrelation}[2]{% #1 = control sequence, #2 = replacement text
@@ -57,7 +59,8 @@
 \makeatother
 
 \newrelation{\myRgood}{R^X}
-\newrelation{\pinc}{Q^\text{p}}%partial pref, complement (incomparable)
+\newrelation{\pinc}{\!\parallel\!}%partial pref, complement (incomparable)
+%\newrelation{\pinc}{Q^\text{p}}%partial pref, complement (incomparable)
 
 \newcommand{\profile}{\textbf{v}}%(complete) profile
 \newcommand{\pprofile}{\textbf{p}}%partial profile
@@ -71,6 +74,7 @@
 
 
 \newtheorem{claim}{Claim}
+\newtheorem{prop}{Proposition}
 \newtheorem{corollary}{Corollary}
 \newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
@@ -95,18 +99,15 @@
 \begin{abstract}
 Social choice deals with the problem of determining a consensus choice from the preferences of different agents (voters).
 In the classical setting, the voting rule is fixed beforehand and full preference information is provided by the voters. 
-Recently, the assumption of full preference information has been questioned by a number of researchers and 
-number of frameworks for vote elicitation have been proposed.
+Recently, the assumption of full preference information has been questioned by a number of researchers and several methods for eliciting voters information have been proposed.
 
 In this paper we go one step further and we assume that both the voting rule and the voters preferences are partially specified.
-Focusing on positional scoring rules, we assume that the chair %is not able to give the definition of the rule but 
-is able to answer simple questions  requiring to pick a winner from a specific  example profile.
+Focusing on positional scoring rules, we assume that the chair, while  not able to give a precise definition of the rule, is capable of answering simple questions  requiring to pick a winner from a specific  example profile.
 Moreover, the preferences of the voters are incrementally acquired by asking comparison queries.
 
 We propose a method  for robust approximate winner determination in this setting with minimax regret. 
 We then provide an interactive elicitation protocol based on minimax regret
-%We then show how minimax regret can be used to drive the elicitation in order to ask informative queries in order to a
-and develop several query strategies that interleave questions to the chair and questions to the voters in order to acquire the most relevant information about the preferences and voting rule.
+and develop several query strategies that interleave questions to the chair and questions to the voters in order to acquire the most relevant information in order to quickly converge to optimal or a near-optimal alternative.
 \end{abstract}
 
 \section{Introduction}
@@ -120,87 +121,44 @@ In many situations, such as in group recommender systems, the goal is to find a 
 It is therefore natural to look at methods from social choice and see how they can be adapted for group decision-making in a computerized setting.
 
 The traditional approach to social choice assumes that both the social function and the full preference orderings of the voters are expressed beforehand. 
-As noted by several authors requiring voters to express full preference orderings can be prohibitively costly (in term of cognitive and communication cost), especially for  large sets of alternatives.
-This observation has motivated a number of recent works \cite{Xia2008,Kalech2011,Lu2011,Naamani-Dery2015} have considered social choice with partially specified preferences and incremental elicitation of voters preferences. % including several works on social choice with partial profiles.
+As noted by several authors requiring voters to express full preference orderings can be prohibitively costly (in term of cognitive and communication cost), especially for decisions with large sets of alternatives.
+This observation has motivated a number of recent works considering social choice with partial preference orders  \cite{Xia2008,Pini2009,Konczak05} and incremental elicitation \cite{Kalech2011,Lu2011,Naamani-Dery2015} of voters preferences. 
 
-%Recently, the assumption of full a has been questioned by a number of researchers
-%In many real situations, however, it may be necessary to reason with partial preferences, as some preferences are not available and too expensive to obtain (with respect to a cognitive or economic cost). 
 On the other hand, in several situations it may not be easy to precisely define the voting rule.
-In particular, when considering positional scoring rules, it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.
-Among others, Llamazares and Pe{\~{n}}a \cite{Llamazares2013} have considered  the problem of dealing with underspecified weights in positional scoring rules.
-Cailloux and Endriss \cite{Cailloux2014} have proposed elicitation methods for based on partial orders.
 Indeed, it is possible that the chair may have some preferences over the desired aggregation method, but may still be not able to formalize the voting rule upfront.
-%argued that it might not always be realistic to assume that a voting rule is known precisely.
+The work of Cailloux and Endriss \cite{Cailloux2014} is particularly notable: it provides elicitation methods  for a quite general class of rules based on well orders.
+In particular, when considering positional scoring rules, several authors \cite{Stein1994,Llamazares2013,Viappiani2018} have worked on  positional scoring rules with uncertain weights (assuming that the preferences of the voters are fully known).
+%it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.
+%Among others, Llamazares and Pe{\~{n}}a have considered  the problem of dealing with underspecified weights in positional scoring rules.
 
-%We argue that it is possible that the committee wants to precise some preferences about the aggregations.
 In this paper we consider that both preferences and the social choice rule can be only partially specified.
-We develop methods for computing the minimax-optimal alternative for scoring rules with partial preference information and partial information about the weights.
-While previous works have considered either partial preferences or a partially specified aggregation, we do not know of any work considering both sources of uncertainty at the same time.
+We develop methods for computing the minimax-optimal alternative for scoring rules with partial preference information and partial information about the weights of the scoring rule.
+While previous works have considered either partial information about the voters preferences or a partially specified aggregation method, we do not know of any work considering both sources of uncertainty at the same time.
 
+%We consider that the committee wants to express preferences for some voting rules
 % Incremental elicitation of preferences is critical to easing the cognitive and communication cost for users 
 %In this paper we provide a method for approximate winner determination and an incremental elicitation protocol based on minimax regret. 
 %In this paper we relax the traditional assumptions.
 %Incremental elicitation of preferences can help mitigating the cognitive and communication costs
 
-We focus on positional scoring rules, that  are a particularly common methods used to aggregate rankings and determine  a winner.
-We also address the problem of elicitation, providing incremental elicitation methods to acquire relevant preference information. 
-%The score can be seen as a utility for the society.
-%and often captures more information than is needed to determine the winner
-We discuss  heuristics that allow us to determine queries that quickly allow to reduce minimax regret.
-We develop several query strategies that  focus simultaneously on reduction of relevant preference and voting rule uncertainty.
+In this work, we focus on positional scoring rules, that  are a particularly common method used to aggregate rankings and determine  a winner.
+We also address the problem of elicitation, providing incremental elicitation methods to acquire relevant preference information; we discuss  several heuristics that allow us to determine queries that quickly allow to reduce minimax regret.
+In particular, our query strategies  focus simultaneously on reduction of relevant preference and voting rule uncertainty.
 % the value of certain preference information is often not worth the cost of obtaining it.
-
-%We consider that the committee wants to express preferences for some voting rules
-
 % We must engage in simultaneous elictation of the rule and of the preferences.
 
 %In this paper we propose an interactive adaptive protocol for eliciting both the voters preferences and the voting rule.
 %At each step we need to decide whether we want to ask a question to the committee or to one of the agents (and to which agent in particular).
-
-%We want to design a questioning strategy to minimize the worst regret in the long run
-% A questioning strategy indicates, given a partial profile and a set of feasible weights, which question to ask next. A question is either a query to the voter $i$ about her preference relation $\succ_i$ or a query to the committee about the feasible weights. 
-
-%The voting scheme selects the winner (a consensus option).
-%Incremental elicitation 
 The paper is organized as follows.
 In Section \ref{sec:background} we provide the necessary background.
 We introduce the minimax criterion and in Section \ref{sec:mmr}.
-In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minima regret; finally in Section 
-\ref{sec:conclusions} we provide some final thoughts.
+In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minima regret;  in Section \ref{sec:experiments} we present the empirical validation of our approach with simulations, and finally in Section \ref{sec:conclusions} we provide some final thoughts.
 
-\begin{itemize}
-\item References: \cite{Cailloux2014}, \cite{Llamazares2013}, \cite{Konczak05}, \cite{Kalech2011}, \cite{Pini2009}, relation to necessary and possible winners \cite{Xia2008}.
-Also this reference: \cite{Naamani-Dery2015}.
-\end{itemize}
 
-% we define a model that allows simultaneous elicitation of the voting rule and user preferences, making appropriate tradeoffs be- tween the two types of information
-
-%\subsection{Related works}
-\paragraph{Text to be placed somewhere:}
-%A number of works have dealt with the problem of reasoning with incompletely specified aggregation functions.
-%In particular, when considering positional scoring rules, it is possible to derive dominance relations (akin to stochastic dominance) that allow to eliminate some alternatives since they will be less preferred than another one for any instantiation of the weights \cite{Stein1994}.
-More recently the characterization of methods for aggregating the uncertainty over the scoring vectors has been studied in \cite{Viappiani2018}.
-
-\medskip
-Using {\em maximum regret} to quantify the worst-case error, the alternative that minimize this error is selected as winner, providing us with a form of robust optimization.
-
-\medskip
-Possible and necessary winner determination \cite{Xia2008}: in typical settings, there will be no necessary winner and too many possible winners.
-
-%We also note that the elicitation methods based on minimax regret described in \cite{Boutilier2006} (and in many other recent papers), while not specifically targeted to scoring rules, can be easily adapted (from a technical point of view) to elicit the scoring vector from a committee.
-
-%\paragraph{Incomplete profiles}
-%In this setting, the system knows a partial preference profile $\ppref$ 
-%The partial preference relation $\ppref_i$ represents our knowledge about the preferences of agent $i$.
-
-%Lu and Boutilier \cite{Lu2011} assume that the preferences of the voters are only partially known (while the social choice function is known and fixed in advance; it is assumed to be decomposable) and 
-% propose to use minimax regret to produce a robust approximation.
-%Each alternative is associated with a max regret value that measures how far from optimal it could be in the worst case given any completion of the partial profile.
-%The computation of max regret is facilitated by the fact the score is decomposable.
 
 \section{Social choice with partial information}\label{sec:background}
 
-In this Section we introduce some basic concepts.
+We now introduce some basic concepts.
 We assume that there is a set $A$ of $m$ alternatives (for instance products, restaurants, movies, public projects, job candidates, etc.) and $n$ agents (voters); each agent is associated to a preference order.
 The goal of the voters is to make a consensus choice, in order to select a ``winner'' given voter rankings.
 
@@ -213,19 +171,20 @@ With a little abuse of notation, we will use the term profile to refer to either
 
 Let $V$ be the set of possible preference profiles (the cartesian product of $n$ linear orders).
 A social choice function $f : V \rightarrow 2^A$ associates a profile with a set of winners.
-Among the many possible social choice functions, we consider {\em positional scoring rules}, which attach weights to positions; 
+Among the many possible social choice functions, we consider {\em positional scoring rules}, which attach weights to positions according to  the vector $(w_1,\ldots,w_m)$ (also called the scoring vector).
 %A scoring rule associates each alternative to a score that is given by the sum of points obtained for each voter.
-an alternative obtains a score that depends on the rank obtained in each of the preference orders:
+An alternative obtains a score that depends on the rank obtained in each of the preference orders:
 \begin{align}
 s(x; \profile, \w) = \sum_{j=1}^{n} w_{v_j(x)}
 = \sum_{i=1}^{m} \alpha^{x}_i w_i . \label{eq:srule}
 \end{align}
 where $\alpha^{x}_i$ is the number of times that alternative $x$ was ranked in the $i$-th position.
 The winner is the alternative with highest score.
-The vector $(w_1,\ldots,w_m)$ is called the scoring vector.
 %We assume that the weights constitute a monotonic sequence: $w_{1} \geq w_{2} \geq \ldots \geq w_{m}$.
+
 In this work we want to reason about partial preference information.
-A partial preference  is encoded by a partial order $\ppref_i$  of voter $i$; in this work we assume that preference information is truthful, i.e. $a \ppref_i b \implies a \pref_i b$.
+A partial preference  is encoded by a partial order $\ppref_j$  of voter $j$; in this work we assume that preference information is truthful, i.e. $a \ppref_j b \implies a \pref_j b$.
+We use $\pinc$ to denote incomparability, that is $a \pinc_{j} b$ iff $a \nppref_j b \wedge b \nppref_j a$.
 An incomplete profile is a set of partial votes  $\textbf{p}=(\ppref_1,\ldots,\ppref_n)$.
 
 A completion of $\ppref_i$ is any linear order $\pref_i$ that extends $\ppref_i$.
@@ -234,58 +193,49 @@ We let $C(\textbf{p})=C(\ppref_1)\times \ldots \times C(\ppref_n)$ be the set of
 
 \medskip
 We also assume that the weights of the scoring rule are only partially specified.
-We consider a monotonic non-increasing sequence of weights: $w_{1} \geq w_{2} \geq \ldots \geq w_{m}$; this is a natural assumption, as it is better to be ranked first than second, second than third, etc. 
+Therefore the vector $(w_1,\ldots,w_m)$  is not known but we are given a set of constraints restraining the possible values that weight can take.
+We consider a non-increasing sequence of weights:
+\begin{align}
+1=w_{1} \geq w_{2} \geq \ldots \geq w_{m}=0 \label{eq:monotone}
+\end{align}
+this is a natural assumption, as it is better to be ranked first than second, second than third, etc. 
 Without loss of generality, we assume $w_1=1$ and $w_m=0$.
 
 The weights of a scoring rule can model different preferences of the committee. 
 For instance, the weights can control the inclination to favour ``extreme'' alternatives (often at either the top or the bottom of the rankings) at the expenses of ``moderate'' alternatives (that are more consistently in the middle part of the rankings).
-However, we argue that in general it can be difficult to set the weights in an appropriate way.
 
 An important class of scoring rule is the one composed of weights that are a convex sequence, meaning that the difference between the weight of the first position and the weight of the second position is at least as much as the difference between the weights of the second and third positions, etc.
-\begin{align} \forall i \in \{1,\ldots,n-2\} \;\; & w_i - w_{i+1} \geq w_{i+1}-w_{i+2} \iff  \\
-& w_i - 2 w_{i+1} + w_{i+2} \geq 0 \label{eq:convexity}
+\begin{align} \forall i \in \{1,\ldots,n-2\} \;\; & w_i - w_{i+1} \geq w_{i+1}-w_{i+2}  \\
+\iff & w_i - 2 w_{i+1} + w_{i+2} \geq 0 \label{eq:convexity}
 \end{align}
 The constraint above is often used when aggregating rankings in sport competitions.
 We use $\mathcal{W}$ to denote the set of convex weight vectors.
 
-Additionally the chair (the person or the organization that is supervising the voting process) may be able to specify additional preferences about how the social choice function should behave.
+We argue that in general it can be difficult to set the weights in an appropriate way.
+We assume that in addition of basic requirments (monotonicity and convexity)  the chair (the person or the organization that is supervising the voting process) may be able to specify additional preferences about how the social choice function should behave.
 In this work we assume that preferences of the chair are encoded with linear constraints on the vector $\w$, relating the value of the weights of different positions.
 Of course it may be difficult for real decision makers to state preferences about the voting rule in such an abstract way, unless perhaps in some limited cases (a specific instance of these preferences may consist in giving upper or lower bound on the value of $w_{i}$ for position $i$).
 These additional preferences can be elicited by asking questions about concrete profiles, for instance, by showing a complete profile of a small synthetic election and asking who should be elected in this case.
 We discuss queries asked to the chairs and strategies to select queries later in Section \ref{sec:elicit}.
 
-% Theoretical complexity of partial completition
-% We are given  $\ppref_i $,  a partial preference.
-% The maximum regret is considered by assuming an adversary can choose the profile
-% \begin{align*}
-% \PMR(a,b; p) & = \max_{v \in C(p)} s(b; v) - s(a; v) \\
-% \MR(a; p) & = \max_{b} \PMR(a,b) 
-% \end{align*}
-% 
-% We then choose the minimax regret optimal alternative:
-% \begin{align*}
-% \MMR(p) & = \min \PMR(a,b) \\
-% a^{*}(p) & \in \arg\min \PMR(a,b) 
-% \end{align*}
-%Max regret and minimax regret can be computed using independent completion of partial votes for non-decomposable scoring rules. 
-
 \section[Minimax regret under partial profile and weight information]{
 Robust winner determination}
 \label{sec:mmr}
 
-% This leads to interesting tradeoffs in elicitation
-%The regret-minimizing alternative may not be a possible winner for some voting rules.
-In this paper, we consider a setting where both the voters' preferences and the preferences of the chair about the voting rule are incomplete.
-%\medskip
 %The quality of an alternative can be quantified by considering the maximum regret with respect to an adversary that can choose the instantiation of both a complete profile (extending the known preferences of the agents) and of the scoring vectors (associated to the preferences of the committee).
+In this paper, we consider a setting where both the voters' preferences and the preferences of the chair about the voting rule are incomplete.
+Notice that some authors have considered possible and necessary winners assuming a partial profile  \cite{Xia2008} or assuming an incompletely specified scoring rule \cite{Viappiani2018};
+however, we note that, in typical settings, there will be no necessary winner and too many possible winners.
+In practice, however, it is often imperative to declare a winner given partial information.
 
-As a decision criterion to determine a winner, we propose to use the minimax regret. 
+As a decision criterion to determine a winner, we propose to use minimax regret. 
 Minimax regret \cite{Savage1954} is a decision criterion that has been used for robust optimization under data uncertainty \cite{Kouvelis1997} and as well in decision-making with uncertain utility values  \cite{Salo2001,Boutilier2006}.
 %Minimax regret \cite{Boutilier2006} has been used for making decisions under utility uncertainty and for preference elicitation.
 Lu and Boutilier \cite{Lu2011} have adopted minimax regret for winner determination in social choice with
 the preferences of the voters that are only partially known, while the social choice function is known and fixed in advance.
 
-This paper tackles the more challenging setting of the simultaneous presence of uncertainty in the agents' preferences and uncertainty in the weights.
+In this work we consider the simultaneous presence of uncertainty in the agents' preferences and uncertainty in the weights.
+Using {\em maximum regret} to quantify the worst-case error, the alternative that minimize this error is selected as winner, providing us with a form of robust optimization.
 Intuitively, the quality of a proposed alternative $a$ is how far from optimal $a$  could be in the worst case, given the current knowledge about the voting rule and about the voters' preferences.
 
 The maximum regret is considered by assuming an adversary can choose both 1) to extend the partial profile into a complete profile 2) can instantiate the weights choosing among any feasible weight vector in $W \subseteq \mathcal{W}$.
@@ -306,14 +256,14 @@ Max regret $\MR(x;\pprofile,W)$ is the worst-case loss of $x$. It is the loss oc
 & = \max_{\w \in W} \max_{\profile \in C(p)} \Regret(x, \profile, \w).
 \end{align}
 
-Finally,  $\MMR(\pprofile,W)$ is the value of minimax regret under $\pprofile$ and $W$, obtained when recommending the minimax optimal alternative $x^*$:
+Finally,  $\MMR(\pprofile,W)$ is the value of minimax regret under $\pprofile$ and $W$, obtained when recommending a minimax optimal alternative $x^*$:
 \begin{align*}
 \MMR(\pprofile,W) & = \min_{x \in A} \MR(x;\pprofile,W) \\
-x^{*}(\pprofile,W) & \in \arg\min_{x \in A} \MR(x;\pprofile,W) 
+x^{*}_{\pprofile,W} & \in \arg\min_{x \in A} \MR(x;\pprofile,W) 
 \end{align*}
 By recommending the alternative associated with minimax regret, we can provide a recommendation that gives worst-case guarantees, giving some robustness in face of uncertainty (due to both not knowing the agents' preferences and the weights used in the aggregation). 
 
-Notice that if $MMR(\pprofile, W)=0$, then $x^{*}(\pprofile,W)$  is a necessary co-winner.
+Notice that if $MMR(\pprofile, W)=0$, then $x^{*}_{\pprofile,W}$  is a necessary co-winner.
 
 % Add some general remarks about using minimax regret
 \subsection{Computation of minimax regret}
@@ -340,14 +290,17 @@ and  can rewrite $\PMR$ as follows:
 Given our hypothesis, for all pairs of alternatives, there exist completions of the partial preferences $\ppref$ that maximize the PMR and that do not depend on the weights. 
 That is, we can exhibit, for each voter $j$, a completion $v_j$ such that $\forall \w, \forall v'_j \in C(\ppref_j): [w_{v_j(y)} - w_{v_j(x)}] \geq [w_{v'_j(y)} - w_{v'_j(x)}]$.
 
-Let $A^+=\{ i \ | \ y \ppref_i x\}$ be the set of agents for which we know that $y$ is preferred to $x$ (positive contribution to pairwise regret), $A^-=\{ i \mid x \ppref_i y\}$ 
-be the set of agents for wich we  know that $x$ is preferred to $y$ (negative contribution) and $A^?=\{ i \mid x \pinc_i y\}$ the remaining case, where the preference between $x$ and $y$ is not known.
+Let $A^+=\{ i \mid \ y \ppref_i x\}$ be the set of agents for which we know that $y$ is preferred to $x$ (positive contribution to pairwise regret), $A^-=\{ i \mid x \ppref_i y\}$ 
+be the set of agents for wich we  know that $x$ is preferred to $y$ (negative contribution) and 
+$A^?=\{ i \mid x \pinc_i y\}$ 
+%$A^?=\{ i \mid x \nsucc_{i} y \wedge y \nsucc_{i} x \}$ 
+the remaining case, where the preference between $x$ and $y$ is not known.
 Consider how the adversary will complete the partial orders:
 \begin{itemize}
  \item $j \in A^+$: If we know that agent $j$ prefers $y$ to $x$ then the adversary will complete the partial order of agent $j$ by placing as many alternatives as possible between $y$ and $x$.
  The way the partial order is completed does not depend on the weights.
 
- \item $j \in A^?$: If we do not know whether $x$ or $y$ is preferred by agent $j$ then the adversary will place $y$ before $x$ in the linear order and this case reduce to the first one; therefore also in this case the completion of the partial order can be done independently of the choice of $w$.
+ \item $j \in A^?$: If we do not know whether $x$ or $y$ is preferred by agent $j$ then the adversary will place $y$ before $x$ (since the goal is to maximize the difference in score between $y$ and $x$, and weights are monotone) in the linear order and this case reduce to the first one; therefore also in this case the completion of the partial order can be done independently of the choice of $w$.
 
  \item $j \in A^-$: If we know that agent $j$ prefers $x$ to $y$ then the adversary will place as few alternatives as possible between $x$ and $y$.
 Define $U$ as the set of alternatives that are incomparable with $x$ and $y$ according to $\ppref_i$. Since weights are assumed to be convex, the adversary will place all alternatives in $U$ as better than $x$.
@@ -365,17 +318,25 @@ Each PMR is computed using a linear program.
 The decision variables correspond to the weights attached to the different positions.
 Constraints are on the feasible parameters (the ``weights'' of the scoring rules); contraints represent the preferences of the chair about the scoring rule.
 
-Let $\hat{v}$ be the compute profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
+Let $\hat{\profile}$ be the profile computed according to the above procedure, and  $\hat{v}_j$ the $j$-th element (the linear order extending the partial order $p_j$ of the $j$-th voter).
+\begin{prop}
+Assume convex weights.
 The PMR can be written as:
-\[ \PMR(x,y; \pprofile, W) = \sum_{j=1}^n w_{\hat{v}_i(y)} - w_{\hat{v}_i(x)} 
-= \sum_{i=1}^m (\alpha_{i}^{y} - \alpha_{i}^{x}) w_i \]
-where the coefficient $ (\alpha_{i}^{y} - \alpha_{i}^{x})$ is the number of times $y$ is in position $i$ minus the number of times $x$ is the in position $i$ in the rankings of the completed profile $\hat{v}$:
-$\alpha_{i}^{x} = \sum_{j=1}^{n}  I[\hat{v}_{j}(x)=i]$ where $I$ is the indicator function.
+\begin{align} 
+\PMR(x,y; \pprofile, W) =  
+\max_{w \in W} s(y; \hat{\profile}, \w) - s(y; \hat{\profile}, \w) =\\
+=\max_{w \in W} \sum_{j=1}^n w_{\hat{v}_i(y)} - w_{\hat{v}_i(x)} =
+\max_{w \in W} \sum_{i=1}^m (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_i 
+\end{align}
+where the coefficient $ (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x})$ is the number of times $y$ is in position $i$ minus the number of times $x$ is the in position $i$ in the rankings of the completed profile $\hat{v}$:
+$\hat{\alpha}_{i}^{x} = \sum_{j=1}^{n}  I[\hat{v}_{j}(x)=i]$ where $I$ is the indicator function.
+\end{prop}
 %\[ \alpha_{i} = \sum_{j=1}^{n}  I[\hat{v}_{j}(y)=i] - I[\hat{v}_{j}(x)=i]\]
-Then, what we have to to compute pairwise max regret is to compute the solution of the following linear program :
+Then, what we have to to compute pairwise max regret $\PMR(x,y; \pprofile,W)$ is to compute the solution of the following linear program defined on variables\footnote{In fact, given our assumpations, $w_{1}=1$ and $w_{m}=0$, therefore there are only $m-2$ variables.} $w_{1},\ldots,w_{m}$:
 \begin{align*}
-\PMR(x,y; \pprofile,W) = \max_{\w} & \sum_{i=1}^m (\alpha_{i}^{y} - \alpha_{i}^{x}) w_{i}\\
+\max_{\w} & \sum_{i=1}^m (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}\\
 \text{ s.t. } & \w \in W \\
+& \text{Equation } (\ref{eq:monotone})\\
 & \text{Equation } (\ref{eq:convexity})
 \end{align*}
 The result of the optimization is the value of the pairwise max regret $\PMR$.
@@ -384,7 +345,7 @@ The result of the optimization is the value of the pairwise max regret $\PMR$.
 {\em (will probably go to a later section, or to the appendix) }
 
 \medskip
-Let $\hat{v}_i$ be the linear order extending $p_i$ according to the above procedure (described in \cite{Lu2011}).
+Let $\hat{v}_i$ be the linear order extending $\succ^{p}_i$ according to the above procedure (described in \cite{Lu2011}).
 Then PMR can be written as follows:
 \begin{align*}
  &\PMR(x,y; \pprofile, W) =\\ 
@@ -392,7 +353,7 @@ Then PMR can be written as follows:
  \end{align*}
 %Note that the second addendum inside the max do not depend on the choice of $\w$.
 Consider the two addendum inside the outer ``max''. 
-The first addendum is concern with positioning of alternatives $x$ and $y$ for voters in $A^{-}$for which we know that $x$ is preferred to $y$.
+The first addendum is concerned with positioning of alternatives $x$ and $y$ for voters in $A^{-}$ for which we know that $x$ is preferred to $y$.
 The second addendum is concerned with voters in $A^{+}$ and $A^{?}$.
 We rewrite the second addendum as:
 \begin{align*}
@@ -404,7 +365,7 @@ where $\hat{\alpha}_{i}^{x}$ is the number of times that $x$ is ranked  in posit
 
 We now show how to optimize $\PMR$.
 In addition to variables $\{ w_{j} \}_{j=1,\ldots,m}$ (one for each position) we need to employ several additional decision variables.
-We introduce two set of binary variables $B^{+}_{i,j}$ and $B^{-}_{i,j}$  for each position $i$ and for each voter $j$.
+We introduce two sets of binary variables $B^{+}_{i,j}$ and $B^{-}_{i,j}$  for each position $i$ and for each voter $j$.
 Variable $B_{i,j}^{+}$ encodes the fact that the alternative $y$ is placed in position $i$ in the ranking of agent $j$; while  $B_{i,j}^{-}$ encodes the same thing for alternative $x$.
 
 We also have numerical variables to represent the weights of the scoring rule.
@@ -414,22 +375,19 @@ $\sum_{i=1}^{m} B_{i,j}^{+} = 1$ and $\sum_{i=1}^{m} B_{i,j}^{-} = 1$.
 
 The score of alternative $y$ can be written as $\sum_{i = 1}^{m} \hat{\alpha}_{i}^{y} + \sum_{i=1}^{n} \sum_{j=1}^{m} w_{j} B_{i,j}^{+}$.
 The objective function is now:
- \[ \max \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}  \sum_{i=1}^{n} \sum_{j=1}^{m} B_{i,j}^{+} w_j- B_{i,j}^{-}  w_j \]
+ \[ \max \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i} +  \sum_{i=1}^{n} \sum_{j=1}^{m} B_{i,j}^{+} w_i- B_{i,j}^{-}  w_i \]
 
 We use integer programming enconding tricks in order to linearize the problem formulation.
 We introduce yet another set of variables  $V_{i,j}^{+} $  and $V_{i,j}^{-}$ % the multiplicative terms by new variables.
-and we enforce that $V_{i,j}^{+} = B^{+}_{i,j} w_j$ by setting constraints $V_{l}^{j} \leq B^j $ and $V_{l}^{j} \leq w_l$.
+and we enforce that $V_{i,j}^{+} = B^{+}_{i,j} w_i$ by setting constraints $V_{l}^{j} \leq B^j $ and $V_{l}^{j} \leq w_l$.
 %\begin{align*} 
 %V_{l}^{j} \leq B^j \\
 %V_{l}^{j} \leq w_l
 %\end{align*}
 %The expression $B^j_l w_l$ evaluates to $w_l$ if $I^j_l = 1$, and to $0$ otherwise.
-  
-
-%Variable $I^j$ associated with the constraint $0 \leq I \leq |U^j|$.
- Finally, the following is the optimization problem that compute the value $\PMR$.
+  %Variable $I^j$ associated with the constraint $0 \leq I \leq |U^j|$.
+% Finally, the following is the optimization problem that compute the value $\PMR$.
  %The decision variables are $w$, $V$, $B$,...
- 
 We therefore obtain the following mixed integer linear program:
 \begin{align}
 \max & \sum_{i=1}^m  [(\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}] +
@@ -438,8 +396,8 @@ We therefore obtain the following mixed integer linear program:
 & \sum_{i=t_{1}}^{t_{2}} B_{i,j}^{+} = 1 & \forall j \\
 & \sum_{i=t_{1}}^{t_{2}} B_{i,j}^{-} = 1 & \forall j \\
 & V_{i,j}^{+} \leq B_{i,j}^{+}  & \forall i,j \\
-& V_{i,j}^{+} \leq w_j & \forall i,j \\
-& V_{i,j}^{-} \geq w + B_{i,j}^{-} - 1 & \forall i,j \\
+& V_{i,j}^{+} \leq w_i & \forall i,j \\
+& V_{i,j}^{-} \geq w_{i} + B_{i,j}^{-} - 1 & \forall i,j \\
 & V_{i,j}^{-} \geq 0 & \forall i,j
 \end{align} 
 %We write $w \in W$ as a shourtcut to represent the constraints that the weights are chosen to be in the feasible set.
@@ -493,10 +451,10 @@ We consider a profile where a fictious alternative $a$ is $1$ time in position $
 in position $i+2$ and another fictitious alternative, $b$, is ranked $\lambda+1$ times in position $i+1$.
 To have a valid profile, we need to include other alternatives.
 We add other alternatives in such a way that they are dominated by $a$ or $b$. 
-(if the chair answers an alternative that is either $a$ or $b$ this is a signale that the model is incorrect).
+(if the chair picks an alternative that is either $a$ or $b$ this is a signale that the model is incorrect).
 
 \vspace{1cm}
-{\bf Complete section:} give a precise algorithm for completing the profile
+{\em {\bf TODO:} complete section and give a precise algorithm for completing the profile}
 \vspace{1cm}
 
 \begin{example}
@@ -516,7 +474,7 @@ b& 0& 0& 3& 0 \\
 \end{array}
 \]
 In order to obtain a valid profile, we need to include a number of other alternatives in such a way that the are dominated by $a$ and $b$.
-The following profile is exactly what we want.
+The following profile is exactly what we want,
 %We add voters in order to increase the number of times $a$ and $b$ are ranked at first position. Please note we must maintain these scheme, so every add of a position to the ranking of $a$ must correspond to the same in the ranking of $b$.
 
 \[
@@ -529,7 +487,7 @@ b& d& b& b& d& c \\
 d& c& a& a& c& d \\
 \end{array}
 \]
-giving the rank distribution (number of times each alternatives is ranked first, second, etc): 
+giving the following rank distribution (number of times each alternatives is ranked first, second, etc): 
 \[
 \begin{array}{ccccc}
 & 1^\circ& 2^\circ& 3^\circ& 4^\circ \\
@@ -567,7 +525,7 @@ In our interactive  protocol for simultaneously eliciting the preferences of the
 Indeed, it can be beneficial to interleave questions asked to the committee and questions asked to voters, depending on which is estimated to be more informative.
 
 Answers given by the committee about the scoring rule refine our knowledge of the weights $w_1,\ldots,w_n$, while
-answers given by one of the agents refine our knowledge about the agent's preferences.
+answers given by one of the voters refine our knowledge about the voters preferences.
 
 At each step we need to decide whether we want to ask a question to the committee or to one of the agents (and to which agent in particular). We can ask comparison queries to the agents and questions comparing the differences of weights to the committee. 
 
@@ -608,13 +566,15 @@ Then use minimax regret as in Lu and Boutilier.
 \item Non-interleaved non-regret strategies (useful as benchmarks).	
 	\begin{itemize}
 		\item Random strategy: randomly chooses an agent $i$ and a comparison query such that $x \pinc_i y$.
-		\item Volumetric strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
+		\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
 	\end{itemize}
 \end{itemize}
 
 % unless $\MMR=0$ we ask a question that reduce uncertainty
 
 \section{Empirical Evaluation} \label{sec:experiments}
+
+{\em {\bf TODO:} update with actual experiments}
 
 \begin{figure}[t]
 \begin{center}PLACEHOLDER\end{center}
@@ -631,6 +591,8 @@ Then use minimax regret as in Lu and Boutilier.
 % We can stop elicitation when minimax regret is sufficiently small.
 We test the elicitation protocols in randomly generated datasets and real datasets. % (sushi and iris).
 We evaluate the proposed method using the following simulated protocol.
+Our goal is to 
+ to verify our intuition that an interleaved elicitation approach (mixing questions to the chair and questions asked to the voters) is more efficient than performing the elicitation of the rule first and than eliciting the voters preferences.
 First of all, we randomly generate the true preferences of the users (i.e. the linear orders) and the weights associated with the committee's scoring rule.
 For each of the elicitation strategy, we simulate an elicitation session.
 %Queries are posed to simulated users, that answer accor
@@ -641,6 +603,8 @@ We measure the effectiveness of our strategies of Section \ref{sec:elicit} by ex
 We performed tests with different values of $m$ (number of alternatives) and $n$ (number of agents); test with different population sizes, different number of alternatives, etc.
 
 We experimented with both settings that assume a convex sequences of weights, and others without this assumption.
+
+{\em {\bf TODO:} say something about computation times}
 
 %Comparison between our interleaved strategy and a strategy, still based on minimax regret  but that is not interleaved; also compare to some heuristic baselines.
 
